# daily_update

./: .env.example  .gitignore  Daily Update Automation: Scoping Doc.md  README.md  pyproject.toml
.github/workflows/: daily_update.yml  token-health.yml  weekly_tuneup.yml
archive/: 2026-05-01.md  2026-05-02.md  2026-05-03.md
config/: newsletters.yml  preferences.yml  teams.yml  tickers.yml
scripts/: check_token_health.py  get_refresh_token.py
src/: budget.py  claude_client.py  delivery.py  email_client.py  email_summary.py  feedback.py  main.py  markets.py  newsletters.py  sports.py  tuneup.py  utils.py
state/: last_run.json
tests/: test_budget.py  test_check_token_health.py  test_claude_client.py  test_delivery.py  test_email_client.py  test_email_summary.py  test_feedback.py  test_main.py  test_markets.py  test_newsletters.py  test_sports.py  test_tuneup.py  test_utils.py
