[project]
name = "daily-update"
version = "0.1.0"
description = "Automated daily email briefing: inbox summary, sports, markets, AI news."
requires-python = ">=3.12,<3.13"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "msal>=1.31.0",
    "pyyaml>=6.0.2",
    "yfinance>=0.2.50",
    "markdown>=3.7",
    "python-dateutil>=2.9.0",
    "tenacity>=9.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.7.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
